--- a/platformio.ini
+++ b/platformio.ini
@@ -25,3 +25,9 @@ lib_deps =
   FastLED=symlink://./
 
 ; build_flags = -DFASTLED_ESP32_COMPONENT_LED_STRIP_BUILT_IN
+build_flags =
+	-DFASTLED_ESP32_COMPONENT_LED_STRIP_BUILT_IN_COMPILE_PROBLEMATIC_CODE=1
+	-DFASTLED_ESP32_COMPONENT_LED_STRIP_BUILT_IN=1
+	-DCORE_DEBUG_LEVEL=5
+	-fpermissive
+	; -Wno-error=deprecated-declarations
