--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,6 @@ lib_deps =
 build_flags =
 	-DFASTLED_ESP32_COMPONENT_LED_STRIP_BUILT_IN_COMPILE_PROBLEMATIC_CODE=1
 	-DFASTLED_ESP32_COMPONENT_LED_STRIP_BUILT_IN=1
+	-DLOG_LOCAL_LEVEL=ESP_LOG_DEBUG
 	-DCORE_DEBUG_LEVEL=5
-	-fpermissive
 	; -Wno-error=deprecated-declarations
