Add LED_STRIP_HAS_MAIN_H flag for main.cpp

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,4 +22,5 @@ monitor_filters =
 build_flags =
 	-DLOG_LOCAL_LEVEL=ESP_LOG_DEBUG
 	-DCORE_DEBUG_LEVEL=5
+	-DLED_STRIP_HAS_MAIN_H
 	; -Wno-error=deprecated-declarations
